--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@typescript-eslint/parser": "^5.57.0",
     "eslint": "^8.37.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-plugin-react": "^7.32.2"
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-tailwindcss": "^3.10.3",
+    "tailwindcss": "^3.3.1"
   }
 }
